<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"--><!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"--><!--android:paddingRight="@dimen/activity_horizontal_margin"--><!--android:paddingTop="@dimen/activity_vertical_margin"--><!--android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">-->

<!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"--><!--android:layout_height="wrap_content" />-->

<!--</RelativeLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Wifi Scanner periodically scans your location and surrounding wifi access points, and saves that information." />-->

    <TextView
        android:id="@+id/archivePathAndCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/archive_path_and_count"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pipeline_enabled" />

        <CheckBox
            android:id="@+id/enabledCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dataCountText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/data_count"/>
    </LinearLayout>

    <Button
        android:id="@+id/archiveButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_to_sd" />

    <Button
        android:id="@+id/scanNowButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_now"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/received_data"/>

    <ScrollView
        android:id="@+id/receivedDataScroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <TextView
            android:id="@+id/receivedDataText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>

        </ScrollView>
</LinearLayout>
